{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 4,
  "lineage": "5a3b6d83-02af-c414-c8ce-1289a942077c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group/sg-0af6e5c5991afafd3",
            "description": "Security group for allowing specific traffic",
            "egress": [],
            "id": "sg-0af6e5c5991afafd3",
            "ingress": [],
            "name": "app_firewall",
            "name_prefix": "",
            "owner_id": "844416514196",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreationDate": "date-2026-03-02",
              "Team": "security-team"
            },
            "tags_all": {
              "CreationDate": "date-2026-03-02",
              "Team": "security-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sg-0af6e5c5991afafd3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group/sg-08ecd73cc6847a3fa",
            "description": "Security group for allowing specific egress traffic",
            "egress": [],
            "id": "sg-08ecd73cc6847a3fa",
            "ingress": [],
            "name": "db_firewall",
            "name_prefix": "",
            "owner_id": "844416514196",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreationDate": "date-2026-03-02",
              "Team": "security-team"
            },
            "tags_all": {
              "CreationDate": "date-2026-03-02",
              "Team": "security-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sg-08ecd73cc6847a3fa",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}